# RESTProject-bot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.debug.yaml  docker-compose.yml  pyproject.toml
bot/: bot.py  main.py  settings.py
bot/api/: api_requests.py
bot/commands/: handler.py  step_handler.py
bot/handlers/: basic_answers.py  commands_handler.py  events_handler.py  handler_config.py  transaction_steps.py  wallet_steps.py
bot/schemas/: message.py
bot/utils/: check.py  keyboard.py  redis_utils.py
