[tool.poetry]
name = "restproject-bot"
version = "0.1.0"
description = ""
authors = ["CreativeeBlackWolf"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.76.0"
vk-api = "^11.9.8"
redis = "^4.2.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
